# get-repo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
get_repo/: __init__.py
git_get/: cli.py
stubs/: giturlparse.pyi
tests/: test_get_repo.py  test_git_get.py  test_url_parser.py
